# problem_solving

./: README.md
STL/hash_map_tutorial/: CMakeLists.txt  main.cpp
Savitch/chapter_11_projects/: CMakeLists.txt  Document1.txt  Document2.txt  checkbook.cpp  checkbook.hpp  complexNumbers.cpp  complexNumbers.hpp  list.cpp  list.hpp  main.cpp  money.cpp  money.hpp  pairs.cpp  pairs.hpp  percent.cpp  percent.hpp  polynomial.cpp  polynomial.hpp  projectTests.cpp  projectTests.hpp  rational.cpp  rational.hpp  stringSet.cpp  stringSet.hpp  stringVar.cpp  stringVar.hpp  text.cpp  text.hpp  vectorDouble.cpp  vectorDouble.hpp
Savitch/chapter_12_projects/: CMakeLists.txt  digitalTime.cpp  digitalTime.hpp  digitalTime2.cpp  digitalTime2.hpp  main.cpp  password.cpp  password.hpp  projectTests.cpp  projectTests.hpp  user.cpp  user.hpp
Savitch/chapter_13_projects/: CMakeLists.txt  computerLab.cpp  computerLab.hpp  dmv.cpp  dmv.hpp  evaluateInfix.cpp  evaluateInfix.hpp  graph.cpp  graph.hpp  list.cpp  list.hpp  main.cpp  node.cpp  node.hpp  polynomial.cpp  polynomial.hpp  projectTests.cpp  projectTests.hpp  queue.cpp  queue.hpp  queueString.cpp  queueString.hpp  reversePolishNotation.cpp  reversePolishNotation.hpp  stack.cpp  stack.hpp  stackInt.cpp  stackInt.hpp  stackString.cpp  stackString.hpp  suitor.cpp  suitor.hpp
Savitch/chapter_14_projects/: CMakeLists.txt  binarySearch.cpp  binarySearch.hpp  main.cpp  permutations.cpp  permutations.hpp  powers.cpp  powers.hpp  projectFunctions.cpp  projectFunctions.hpp  projectTests.cpp  projectTests.hpp  selfTestExercises.cpp  selfTestExercises.hpp  stackString.cpp  stackString.hpp  towersHanoi.cpp  towersHanoi.hpp  verticalNumbers.cpp  verticalNumbers.hpp
Savitch/chapter_15_projects/: CMakeLists.txt  administrator.cpp  administrator.hpp  bankAccount.cpp  bankAccount.hpp  billing.cpp  billing.hpp  car.cpp  car.hpp  discountSale.cpp  discountSale.hpp  doctor.cpp  doctor.hpp  employee.cpp  employee.hpp  figure.cpp  figure.hpp  guessingGame.cpp  guessingGame.hpp  hourlyEmployee.cpp  hourlyEmployee.hpp  main.cpp  partFilledArray.cpp  partFilledArray.hpp  partFilledArrayWMax.cpp  partFilledArrayWMax.hpp  patient.cpp  patient.hpp  permanentEmployee.cpp  permanentEmployee.hpp  person.cpp  person.hpp  predatorPrey.cpp  predatorPrey.hpp  projectTests.cpp  projectTests.hpp  queueInt.cpp  queueInt.hpp  salariedEmployee.cpp  salariedEmployee.hpp  (+12 more)
Savitch/chapter_16_projects/: CMakeLists.txt  bank.cpp  bank.hpp  callingDepth.cpp  callingDepth.hpp  checkedArray.cpp  checkedArray.hpp  convertDate.cpp  convertDate.hpp  main.cpp  numericHist.cpp  numericHist.hpp  projectTests.cpp  projectTests.hpp  stack.cpp  stack.hpp  timeConvert.cpp  timeConvert.hpp
Savitch/chapter_17_projects/: CMakeLists.txt  arrayAlgorithms.h  genericList.cpp  genericList.h  main.cpp  map.cpp  map.h  permutations.h  priorityQueue.cpp  priorityQueue.h  projectTests.cpp  projectTests.h  set.cpp  set.h  stack.cpp  stack.h  stack.hpp
Savitch/chapter_18_projects/: CMakeLists.txt  STLPractice.h  bookDatabase.cpp  bookDatabase.h  invitationList.cpp  invitationList.h  main.cpp  movies.cpp  movies.h  movies.txt  permutations.cpp  permutations.h  projectTests.cpp  projectTests.h
data_structures/tree_traversal/: main.cpp
misc/recursion/: CMakeLists.txt  main.cpp
misc/tree_traversal/: CMakeLists.txt
word_frequency/: CMakeLists.txt  INSTRUCTIONS.txt  example_text.txt  main.cpp  projectTests.cpp  projectTests.h  wordFrequency.cpp  wordFrequency.h
